@@ -1,3 +1,15 @@
+2012-05-06  Eric Seidel  <eric@webkit.org>
+
+        Update several build-webkit options to match the #defines they toggle
+        https://bugs.webkit.org/show_bug.cgi?id=85744
+
+        Reviewed by Adam Barth.
+
+        Most notable here is fixing --3d-canvas to be --webgl these days --
+        the define was renamed 15 months ago!
+
+        * Scripts/webkitperl/FeatureList.pm:
+
 2012-05-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>
 
         [EFL] EFL's LayoutTestController setJavaScriptCanAccessClipboard implementation
